###########################################################################
##
## File:        etc/Makefile.am
## Versions:    $Id: Makefile.am,v 1.2 2002/06/14 21:57:03 rkowen Exp $
## Created:     2002/06/14
##
###########################################################################


AUTOMAKE_OPTIONS=foreign dejagnu no-installinfo

bin_SCRIPTS = add.modules mkroot

